Closed Bug 1073727 Opened 10 years ago Closed 10 years ago

Can't overscroll to the bottom

Categories

(Core :: Panning and Zooming, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: mstange, Assigned: mstange)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch add-fabs (obsolete) — Splinter Review
While trying to get overscrolling to work on Mac, I noticed that I couldn't overscroll to the bottom in some cases, because AsyncPanZoomController::OverscrollForPanning was setting aOverscroll.y to zero when mPanDistance was (0, -2).
Is this code just missing some fabs()s?
Attachment #8496307 - Flags: review?(botond)
Comment on attachment 8496307 [details] [diff] [review]
add-fabs

Review of attachment 8496307 [details] [diff] [review]:
-----------------------------------------------------------------

My intention is for OverscrollHandoffState::mPanDistance to be a distance rather than a displacement, i.e. for its components to be already fabs'd. (Perhaps one day I'll write some unit classes that allow us to express this distinction in the type system.)

TrackTouch() constructs an OverscrollHandoffState correctly by passing in a distance whose components come from Axis::PanDistance(), which calls fabs.

We should fix OnPan() to pass in a point with fabs'd coordinates as well, and perhaps add a clarifying comment above OverscrollHandoffState::mPanDistance.

Thanks for catching this!
Attachment #8496307 - Flags: review?(botond)
Attached patch v2Splinter Review
Assignee: nobody → mstange
Attachment #8496307 - Attachment is obsolete: true
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8496837 - Flags: review?(botond)
Comment on attachment 8496837 [details] [diff] [review]
v2

Review of attachment 8496837 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8496837 - Flags: review?(botond) → review+
https://hg.mozilla.org/mozilla-central/rev/5b56268d964f
https://hg.mozilla.org/mozilla-central/rev/1de7e7a7ad8d
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: