Bug 1073727 - Make OverscrollHandoffState::mPanDistance non-negative during OS X APZ panning. r=botond